--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -34,9 +34,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        {% if site.github.is_project_page %}
-        <p class="copyright">{{ site.github.repository_name }} maintained by {% include contributors.html %}</p>
-        {% endif %}
+        <p class="copyright">{{ site.github.repository_name }}</p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
